@@ -1,4 +1,6 @@
-log_output_level "none";
+log_level "none";
+user "root";
+daemon off;
 worker_proc 1;
 thread_mode off;
 /*
