@@ -5,7 +5,7 @@
  
 Melon Developer Guide
 A software platform for simplifying development on UNIX
-Melon Version 1.2.4
+Melon Version 1.2.5
 E-Mail: Melon-c@hotmail.com
 
 1.Preface
@@ -59,8 +59,8 @@ And the multithread architecture shown in Figure 2.
 
 2.Installation
 We can install Melon following these steps:
-  a) Download and decompress melon-1.2.4.
-  b) Change directory to the melon-1.2.4/.
+  a) Download and decompress melon-1.2.5.
+  b) Change directory to the melon-1.2.5/.
   c) Execute shell command
          ./configure [--prefix=/...|--help]
          make
@@ -72,7 +72,7 @@ We can install Melon following these steps:
 
 3.Types
 There are some basic custom types, such as mln_u8_t, etc.
-Their definitions can be found in melon-1.2.4/include/mln_types.h.
+Their definitions can be found in melon-1.2.5/include/mln_types.h.
 
 4.Interfaces
   1) String
