@@ -48,7 +48,6 @@ extern void _mln_sys_log(enum log_level level, \
                          ...);
 #define mln_log(err_lv,msg,...) \
     _mln_sys_log(err_lv, __FILE__, __FUNCTION__, __LINE__, msg, ## __VA_ARGS__)
-extern int mln_log_set_level(void);
 extern int mln_log_get_fd(void);
 extern char *mln_log_get_dir_path(void);
 extern char *mln_log_get_log_path(void);
